--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Taller de eventos</title>
 </head>
 <body>
     
-    <button>Saludar</button>
+    <button onclick= "alert('Hola!')">Saludar</button>
+
+    
 </body>
 </html>
