--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taller de eventos</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./eventos.js" defer></script>
 </head>
 <body>
     
-    <button onclick= "alert('Hola!')">Saludar</button>
+    <div id="divBoton">
+        <button onclick= "alert('Hola!')">Saludar</button>
+    </div>
 
-    
 </body>
 </html>
