soluciono el problema de la propagacion

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <div id="divBoton">
-        <button onclick= "alert('Hola!')">Saludar</button>
+        <button id="boton">Saludar</button>
     </div>
 
 </body>
